Added correct api type
